--- a/README.textile
+++ b/README.textile
@@ -14,8 +14,6 @@ Debuggers we currently support are:
  * ruby-debug (Ruby)
  * zshdb (Zsh)
 
-The debugger is run out of a comint process buffer, or you can use a
-"track-mode" inside an existing shell.
+The debugger is run out of a comint process buffer, or you can use a "track-mode" inside an existing shell.
 
-To install you'll need a couple of other emacs packages installed.
-See http://wiki.github.com/rocky/emacs-dbgr/how-to-install for how to install.
+To install you'll need a couple of other emacs packages installed. See "the installation instrictions":http://wiki.github.com/rocky/emacs-dbgr/how-to-install for details.
