--- a/README.textile
+++ b/README.textile
@@ -16,4 +16,4 @@ Debuggers we currently support are:
 
 The debugger is run out of a comint process buffer, or you can use a "track-mode" inside an existing shell.
 
-To install you'll need a couple of other emacs packages installed. See "the installation instrictions":http://wiki.github.com/rocky/emacs-dbgr/how-to-install for details.
+To install you'll need a couple of other Emacs packages installed. See "the installation instructions":http://wiki.github.com/rocky/emacs-dbgr/how-to-install for details.
