--- a/README.textile
+++ b/README.textile
@@ -22,4 +22,4 @@ The debugger is run out of a comint process buffer, or you can use a "track-mode
 
 To install you'll need a couple of other Emacs packages installed. See "the installation instructions":http://wiki.github.com/rocky/emacs-dbgr/how-to-install for details.
 
-To get started using see the "notes on using emacs-dbgr":http://wiki.github.com/rocky/emacs-dbgr/how-to-use for details.
+To get started using see the "notes on using emacs-dbgr":http://wiki.github.com/rocky/emacs-dbgr/how-to-use .
