--- a/THANKS
+++ b/THANKS
@@ -3,3 +3,5 @@ Lars Andersen (expez) - Getting this packaged and put on to Melpa. Also the new 
 Anders Lindgren - The inspiration behind in an earlier incarnation of this code, ruby-debug. Ideas like short-key-mode are his.
 
 Nick Roberts - We used some of the code for the fringe icons from gdb-mi.
+
+NYC Emacs Meetup and Nicolas Dudebout - straightening me out on set-keymap-parent
