--- a/THANKS
+++ b/THANKS
@@ -7,3 +7,5 @@ Nick Roberts - We used some of the code for the fringe icons from gdb-mi.
 NYC Emacs Meetup and Nicolas Dudebout - straightening me out on set-keymap-parent
 
 Kilian Kilger - gdb fixes
+
+Sean Farley - ipdb support
